# augmented_reality_mobile_application

./: APK_GENERATION_GUIDE.md  APK_SCRIPTS_SUMMARY.md  ARVIEW_REFACTOR_IMPLEMENTATION.md  AR_ENHANCEMENT_DOCUMENTATION.md  AR_INTEGRATION_GUIDE.md  AR_SURFACE_QUALITY_CHECKER_IMPLEMENTATION_COMPLETE.md  CANCEL_BUTTON_REMOVAL.md  COMPILATION_FIX_SUMMARY.md  COMPILATION_ISSUES_RESOLVED.md  DYNAMIC_ROUTINE_IMPLEMENTATION_COMPLETE.md  DYNAMIC_ROUTINE_INTEGRATION.md  NAVIGATION_TEXT_REMOVAL.md  PROJECT_STATUS_SUMMARY.md  README.md  RESOURCE_ADMINISTRATOR_COMPLETE.md  RESOURCE_POOL_DOCUMENTATION.md  ROUTINE_PERFORMANCE_GUIDE.md  YOLO_INPUT_SIZE_UPDATE_SUMMARY.md  build_apk.bat  build_apk.sh  gradle_tasks_apk_distribution.gradle.kts  quick_apk.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/augmented_mobile_application/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/pump/: pump.glb
app/src/main/assets/pump/routines/routine_1/: routine_1.glb  routine_1.txt
app/src/main/assets/pump/routines/routine_2/: routine_2.glb  routine_2.txt
app/src/main/assets/pump/routines/routine_3/: routine_3.glb  routine_3.txt
app/src/main/cpp/: CMakeLists.txt  jni_thread_helper.cpp  jni_thread_helper.hpp
app/src/main/java/com/example/augmented_mobile_application/: AugmentedARApplication.kt  BuildConfig.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
viewmodel/: ManualViewModel.kt
(+64 files in other folders)
